@@ -120,6 +120,10 @@ RELEASE 0.96 - XXX
 
   - Fix a bug introduced in building shared libraries under MinGW.
 
+  From Anthony Roach:
+
+  - Fix use of the --implicit-cache option with timestamp signatures.
+
   From sam th:
 
   - Allow SConf.CheckLib() to search a list of libraries, like the
